# secret-loader

./: .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: credential.rs  error.rs  lib.rs  loader.rs  serde.rs
